welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:28: error: ';' expected but ')' found.
	setCouleurBrosse(T(i+ j - 1)))
                                     ^